# qt_gui_boilerplate

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
src/: mainwindow.cpp  mainwindow.h
